// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event-filter-form Renders \`event-filter-form\` with \`break\` type 1`] = `
<div>
  <div
    class="layout row"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="break"
      />
    </div>
  </div>
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <div
    class="layout row justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`change_entity\` type 1`] = `
<div>
  <div
    class="layout row"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="change_entity"
      />
    </div>
  </div>
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <div
    class="layout row justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <hr
    class="my-3 v-divider theme--light"
  />
  <c-information-block-stub
    title="Change entity options"
  >
    <event-filter-change-entity-form-stub
      form="[object Object]"
      name="config"
    />
  </c-information-block-stub>
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`drop\` type 1`] = `
<div>
  <div
    class="layout row"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="drop"
      />
    </div>
  </div>
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <div
    class="layout row justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`enrichment\` type 1`] = `
<div>
  <div
    class="layout row"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="enrichment"
      />
    </div>
  </div>
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <div
    class="layout row justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <hr
    class="my-3 v-divider theme--light"
  />
  <c-information-block-stub
    title="Enrichment options"
  >
    <event-filter-enrichment-form-stub
      form="[object Object]"
      name="actions"
    />
  </c-information-block-stub>
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with custom props 1`] = `
<div>
  <div
    class="layout row"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="drop"
      />
    </div>
  </div>
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <div
    class="layout row justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with default props 1`] = `
<div>
  <div
    class="layout row"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
      />
    </div>
  </div>
  <c-description-field-stub
    required="required"
  />
  <div
    class="layout row justify-space-between"
  >
    <c-enabled-field-stub />
    <c-priority-field-stub />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    some-required="some-required"
    with-entity="with-entity"
    with-event="with-event"
  />
  <!---->
</div>
`;
